fix the mobile safari input on last stage

--- a/index.html
+++ b/index.html
@@ -1343,18 +1343,14 @@
 
                                 <div id="wopr-prompt" style="display: none; margin-bottom: 20px;">
                                     <p>HOW MANY PLAYERS?</p>
-                                    <div style="margin-top: 20px;">
-                                        <span style="color: var(--terminal-cyan);">>&nbsp;</span>
-                                        <input type="text" id="wopr-input" inputmode="text" autocomplete="off" autocapitalize="off"
-                                            style="background: transparent; border: none; border-bottom: 2px solid var(--terminal-green);
-                                            color: var(--terminal-green); font-family: 'VT323', monospace; font-size: 24px;
-                                            width: 80px; text-align: center; outline: none;"
-                                            onkeydown="if(event.key==='Enter')submitWoprInput()">
-                                        <button onclick="submitWoprInput()"
-                                            style="background: var(--terminal-green); color: #000; border: none;
-                                            font-family: 'VT323', monospace; font-size: 20px; padding: 5px 15px;
-                                            margin-left: 10px; cursor: pointer;">OK</button>
-                                    </div>
+                                    <input
+                                        type="text"
+                                        class="terminal-input"
+                                        id="wopr-input"
+                                        style="font-size: 28px; max-width: 100px"
+                                        maxlength="10"
+                                        autocomplete="off"
+                                    />
                                 </div>
 
                                 <div id="ttt-board" style="display: none; margin: 30px auto;">
@@ -2920,6 +2916,11 @@
                 .getElementById("binaryInput")
                 .addEventListener("keypress", function (e) {
                     if (e.key === "Enter") checkBinary();
+                });
+            document
+                .getElementById("wopr-input")
+                .addEventListener("keypress", function (e) {
+                    if (e.key === "Enter") submitWoprInput();
                 });
         </script>
         <!-- Chrome Dino Game -->
